tools/crates/vendor/toml_edit/tests/fixtures/invalid/bool/mixed-case-true.stderr
TOML parse error at line 1, column 27
  |
1 | mixed-case-true         = trUe
  |                           ^
invalid string
expected `"`, `'`
